@@ -66,15 +66,15 @@ static __inline__ int platform_uuid_compare(uuid_t *uu1, uuid_t *uu2)
 	return uuid_compare(uu1, uu2, NULL);
 }
 
-static __inline__ void platform_uuid_unparse(uuid_t *uu, char **buffer)
+static __inline__ void platform_uuid_unparse(uuid_t *uu, char *buffer)
 {
 	uint32_t status;
-	char *str;
-	uuid_to_string(uu, &str, &status);
+	char *s;
+	uuid_to_string(uu, &s, &status);
 	if (status == uuid_s_ok)
-		strcpy(buf, str);
-	else *buf = '\0';
-	free(str);
+		strcpy(buffer, s);
+	else buffer[0] = '\0';
+	free(s);
 }
 
 static __inline__ int platform_uuid_parse(char *buffer, uuid_t *uu)
